Fix: send authCookie correctly